# IconPackApp

./: README.md  build.py  config.py  core.py  main.py  main.pyw  pyproject.toml  requirements.txt  styles.css
icons/style1/: Half-Life.tga
